--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,13 @@
 @import "tailwindcss";
+
+
 @font-face {
     font-family: 'Roboto';
     src: url('/fonts/roboto/Roboto-Bold.woff2') format('woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
-  }
+}
 
 @font-face {
     font-family: 'Roboto';
@@ -21,31 +23,50 @@
     font-weight: 400;
     font-style: normal;
     font-display: swap;
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Roboto';
     src: url('/fonts/roboto/Roboto-Italic.woff2') format('woff2');
     font-weight: 400;
     font-style: italic;
     font-display: swap;
-  }  
+}  
   
-  @font-face {
+@font-face {
     font-family: 'Roboto';
     src: url('/fonts/roboto/Roboto-Thin.woff2') format('woff2');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Roboto';
     src: url('/fonts/roboto/Roboto-ThinItalic.woff2') format('woff2');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 600;
   }
+
+h3 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+h4 {
+    font-size: 16px;
+    font-weight: 400;
+  }  
 
   
   body {
